--- a/src/features/insights/insights.component.html
+++ b/src/features/insights/insights.component.html
@@ -1,1 +1,5 @@
-<p>Insights Component!</p>
+<div class="insights">
+    <header class="insights_header">
+    <h3>Insights Dashboard</h3>
+  </header>
+</div>
