--- a/src/features/insights/insights.component.html
+++ b/src/features/insights/insights.component.html
@@ -1,5 +1,9 @@
 <div class="insights">
-    <header class="insights_header">
+  <header class="insights_header">
     <h3>Insights Dashboard</h3>
   </header>
+
+  <div>
+    <app-chart></app-chart>
+  </div>
 </div>
