--- a/src/app/shared/components/chart/chart.component.html
+++ b/src/app/shared/components/chart/chart.component.html
@@ -5,7 +5,7 @@
   <p-chart #chart [type]="type()" [data]="data()" [options]="options()" [height]="height()" [width]="width()">
   </p-chart>
 
-  @if(enableZoomPan()) {
+  @if(resetZoomEffect()) {
   <button pButton pRipple severity="success" label="Reset zoom" class="reset_btn" (click)="reset(chart)">
   </button>
   }
