feat: TECH-4 Added mock data in json file.

--- a/src/app/features/insights/insights.component.scss
+++ b/src/app/features/insights/insights.component.scss
@@ -10,7 +10,7 @@
   margin: 20px;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 20px;
+  padding: 20px 8px;
 
   &_chart {
     border: 1px solid #efefef;
