feat: TECH-4 Built bar and stackec charts.

--- a/src/app/features/insights/insights.component.html
+++ b/src/app/features/insights/insights.component.html
@@ -4,15 +4,9 @@
   </header>
 
   <div class="chart">
-    <app-chart
-      class="chart_chart"
-      [type]="'line'"
-      [data]="areaChartData()"
-      [options]="areaChartOptions()"
-      [width]="'90%'"
-      [height]="'400px'"
-      [resetZoomEffect]="true"
-      (resetZoom)="resetZoom($event)">
+    <!-- Area Chart -->
+    <app-chart class="chart_chart" [type]="'line'" [data]="areaChartData()" [options]="areaChartOptions()"
+      [width]="'90%'" [height]="'400px'" [resetZoomEffect]="true" (resetZoom)="resetZoom($event)">
 
       <div class="chart_header">
         <div class="title">
@@ -36,6 +30,30 @@
       </div>
 
     </app-chart>
+
+
+    <!-- Bar chart -->
+    <app-chart class="chart_chart" [type]="'bar'" [data]="barChartData()" [options]="areaChartOptions()" [width]="'100%'"
+      [height]="'400px'" [resetZoomEffect]="false">
+      <div class="chart_header">
+        <div class="title">
+          <p class="chart_header__title">Sales Channel Breakdown</p>
+          <p class="chart_header__sales">Looking at a period of Jun 8 - Jun 14</p>
+        </div>
+      </div>
+    </app-chart>
+
+
+          <app-chart class="chart_chart" [type]="'bar'" [data]="stackedChartData()" [options]="stackedChartOptions()"
+            [width]="'100%'" [height]="'400px'" [resetZoomEffect]="false">
+            <div class="chart_header">
+              <div class="title">
+                <p class="chart_header__title">Avg Ticket Size</p>
+                <!-- Update to add a date -->
+                <p class="chart_header__sales">Looking at each week of Jun</p>
+              </div>
+            </div>
+          </app-chart>
 
   </div>
 </div>
