fix: TECH-5 Added fix to bar chart and added css.

--- a/src/app/features/insights/insights.component.html
+++ b/src/app/features/insights/insights.component.html
@@ -33,7 +33,7 @@
 
 
     <!-- Bar chart -->
-    <app-chart class="chart_chart" [type]="'bar'" [data]="barChartData()" [options]="areaChartOptions()" [width]="'100%'"
+    <app-chart class="chart_chart" [type]="'bar'" [data]="barChartData()" [options]="barChartOptions()" [width]="'100%'"
       [height]="'400px'" [resetZoomEffect]="false">
       <div class="chart_header">
         <div class="title">
