style: TECH-7 Added colors variable file.

--- a/src/app/features/insights/insights.component.scss
+++ b/src/app/features/insights/insights.component.scss
@@ -1,8 +1,10 @@
+@use '../../../assets/themes/colors';
+
 .insights {
   &_header {
     height: 60px;
     width: 100%;
-    border: 1px solid #000;
+    border: 1px solid colors.$black;
     padding: 0px 20px;
     font-size: 16px;
   }
@@ -15,7 +17,7 @@
   padding: 20px 8px;
 
   &_chart {
-    border: 1px solid #efefef;
+    border: 1px solid colors.$gallery_solid;
     border-radius: 8px;
     display: block;
     margin: 10px 0px;
@@ -23,7 +25,7 @@
 
   &_header {
     display: flex;
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid colors.$gallery_solid;
     flex-flow: row wrap;
     min-height: 60px;
     align-items: center;
@@ -34,21 +36,21 @@
       font-size: 14px;
       font-weight: 900;
       margin: 0px;
-      color: #000;
+      color: colors.$black;
       padding: 0px 0px 4px 0px;
     }
 
     &__sales {
       font-size: 12px;
       margin: 0px;
-      color: #6e6e6e;
+      color: colors.$dove_grey;
     }
 
     &__daterange {
       height: 40px;
       font-size: 12px;
       font-weight: 600;
-      color: #000;
+      color: colors.$black;
     }
 
     &__customdate {
