--- a/src/app/shared/components/chart/chart.component.scss
+++ b/src/app/shared/components/chart/chart.component.scss
@@ -1,3 +1,5 @@
+@use '../../../../assets/themes/colors';
+
 p-chart {
   height: inherit;
   display: block;
@@ -9,7 +11,7 @@ p-chart {
   width: 120px;
   height: 40px;
   border-radius: 4px;
-  color: #FFF;
+  color: colors.$white;
   font-size: 14px;
   margin: 10px 0px 20px 20px;
 }
