--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-
+@use "../src/assets/themes/colors.scss";
 // Resetting default CSS
 body,
 html {
