--- a/src/app/features/insights/insights.component.html
+++ b/src/app/features/insights/insights.component.html
@@ -1,19 +1,17 @@
 <div class="insights">
   <header class="insights_header">
     <h3>Insights Dashboard</h3>
+    <!-- <div>
+      <button pButton pRipple label="Date Set 1" class="reset_btn" (click)="updateDataSets('dataSet1')"></button>
+      <button pButton pRipple label="Date Set 2" class="reset_btn" (click)="updateDataSets('dataSet2')"></button>
+      <button pButton pRipple label="Date Set 3" class="reset_btn" (click)="updateDataSets('dataSet3')"></button>
+    </div> -->
   </header>
 
   <div class="chart">
     <!-- Area Chart -->
-    <app-chart
-      class="chart_chart"
-      [type]="'line'"
-      [data]="areaChartData()"
-      [options]="areaChartOptions()"
-      [width]="'90%'"
-      [height]="'400px'"
-      [resetZoomEffect]="true"
-      (resetZoom)="resetZoom($event)">
+    <app-chart class="chart_chart" [type]="'line'" [data]="areaChartData()" [options]="areaChartOptions()"
+      [width]="'90%'" [height]="'400px'" [resetZoomEffect]="true" (resetZoom)="resetZoom($event)">
       <div class="chart_header">
         <div class="title">
           <p class="chart_header__title">Total Sales</p>
@@ -36,38 +34,30 @@
       </div>
     </app-chart>
 
-    <!-- Bar chart -->
-    <app-chart
-      class="chart_chart"
-      [type]="'bar'"
-      [data]="barChartData()"
-      [options]="barChartOptions()"
-      [width]="'100%'"
-      [height]="'400px'"
-      [resetZoomEffect]="false">
-      <div class="chart_header">
-        <div class="title">
-          <p class="chart_header__title">Sales Channel Breakdown</p>
-          <p class="chart_header__sales">Looking at a period of Jun 8 - Jun 14</p>
+    <!-- <div class="container"> -->
+      <!-- Bar chart -->
+      <app-chart class="chart_chart" [type]="'bar'" [data]="barChartData()" [options]="barChartOptions()"
+        [width]="'100%'" [height]="'400px'" [resetZoomEffect]="false">
+        <div class="chart_header">
+          <div class="title">
+            <p class="chart_header__title">Sales Channel Breakdown</p>
+            <p class="chart_header__sales">Looking at a period of Jun 8 - Jun 14</p>
+          </div>
         </div>
-      </div>
-    </app-chart>
+      </app-chart>
 
-    <app-chart
-      class="chart_chart"
-      [type]="'bar'"
-      [data]="stackedChartData()"
-      [options]="stackedChartOptions()"
-      [width]="'100%'"
-      [height]="'400px'"
-      [resetZoomEffect]="false">
-      <div class="chart_header">
-        <div class="title">
-          <p class="chart_header__title">Avg Ticket Size</p>
-          <p class="chart_header__sales">Looking at each week of Jun</p>
+      <!-- Stacked chart -->
+      <app-chart class="chart_chart" [type]="'bar'" [data]="stackedChartData()" [options]="stackedChartOptions()"
+        [width]="'100%'" [height]="'400px'" [resetZoomEffect]="false">
+        <div class="chart_header">
+          <div class="title">
+            <p class="chart_header__title">Avg Ticket Size</p>
+            <p class="chart_header__sales">Looking at each week of Jun</p>
+          </div>
         </div>
-      </div>
-    </app-chart>
+      </app-chart>
+    <!-- </div> -->
+
 
   </div>
 </div>
