--- a/src/app/shared/components/chart/chart.component.html
+++ b/src/app/shared/components/chart/chart.component.html
@@ -1,5 +1,6 @@
 <div class="chart">
 
+  <!-- To project content -->
   <ng-content></ng-content>
 
   <p-chart #chart [type]="type()" [data]="data()" [options]="options()" [height]="height()" [width]="width()">
