--- a/src/app/features/insights/insights.component.html
+++ b/src/app/features/insights/insights.component.html
@@ -1,85 +1,48 @@
 <div class="insights">
   <header class="insights_header">
     <h3>Insights Dashboard</h3>
-
   </header>
 
   <div class="datasets">
     @for(btn of dataSetButton; track btn.id) {
-    <button
-      class="datasets_btn"
-      [class.active]="dataSetNumber() === btn.value"
-      pButton
-      pRipple
-      [label]="btn.label"
+    <button class="datasets_btn" [class.active]="dataSetNumber() === btn.value" pButton pRipple [label]="btn.label"
       (click)="updateDataSets(btn.value)">
     </button>
     }
+
+    <div class="chart_header">
+      <div class="dateranges">
+        <p-select class="chart_header__daterange" [options]="dateRanges" optionLabel="name"
+          (onChange)="onDateRangeChange($event)">
+        </p-select>
+      </div>
+      @if(salesDateRecord() === 'Custom') {
+      <div class="calendar">
+        <p-datepicker class="chart_header__customdate" [(ngModel)]="customStartDate" [showIcon]="true"
+          [readonlyInput]="true" placeholder="Start Date" dateFormat="mm/dd/yy" (onSelect)="onCustomDateSelect()" />
+
+        <p-datepicker class="chart_header__customdate" [(ngModel)]="customEndDate" [showIcon]="true"
+          [readonlyInput]="true" placeholder="End Date" dateFormat="mm/dd/yy" (onSelect)="onCustomDateSelect()" />
+      </div>
+      }
+    </div>
+
   </div>
 
   <div class="chart">
-    <!-- Area Chart -->
-    <app-chart class="chart_chart" [type]="'line'" [data]="areaChartData()" [options]="areaChartOptions()"
-      [width]="'90%'" [height]="'400px'" [resetZoomEffect]="true" (resetZoom)="resetZoom($event)">
+    @if(chartData() && chartData().length) {
+    @for(chart of chartData(); track chart.chartConfig) {
+    <app-chart class="chart_chart" [type]="chart.type" [data]="chart.data" [options]="chart.chartConfigOptions"
+      [width]="chart.width" [height]="chart.height" [resetZoomEffect]="chart.resetZoomEnable"
+      (resetZoom)="chart.callback($event)">
       <div class="chart_header">
         <div class="title">
-          <p class="chart_header__title">Total Sales</p>
+          <p class="chart_header__title">{{ chart.chartTitle }}</p>
           <p class="chart_header__sales">{{ computeDateRangeText() }} </p>
         </div>
-        <div class="dateranges">
-          <p-select class="chart_header__daterange" [options]="dateRanges" optionLabel="name"
-            (onChange)="onDateRangeChange($event)">
-          </p-select>
-        </div>
-        @if(salesDateRecord() === 'Custom') {
-        <div class="calendar">
-          <p-datepicker
-            class="chart_header__customdate"
-            [(ngModel)]="customStartDate"
-            [showIcon]="true"
-            [readonlyInput]="true"
-            placeholder="Start Date"
-            dateFormat="mm/dd/yy"
-            [minDate]="minDateLimit" [maxDate]="maxDateLimit"
-            (onSelect)="onCustomDateSelect()"
-             />
-
-          <p-datepicker
-            class="chart_header__customdate"
-            [(ngModel)]="customEndDate"
-            [showIcon]="true"
-            [readonlyInput]="true"
-            placeholder="End Date"
-            dateFormat="mm/dd/yy"
-            [minDate]="minDateLimit" [maxDate]="maxDateLimit"
-            (onSelect)="onCustomDateSelect()"
-             />
-        </div>
-        }
       </div>
     </app-chart>
-
-    <!-- Bar chart -->
-    <app-chart class="chart_chart" [type]="'bar'" [data]="barChartData()" [options]="barChartOptions()" [width]="'100%'"
-      [height]="'400px'" [resetZoomEffect]="false">
-      <div class="chart_header">
-        <div class="title">
-          <p class="chart_header__title">Sales Channel Breakdown</p>
-          <p class="chart_header__sales">Looking at data for period of Jun 8 - Jun 14</p>
-        </div>
-      </div>
-    </app-chart>
-
-    <!-- Stacked chart -->
-    <app-chart class="chart_chart" [type]="'bar'" [data]="stackedChartData()" [options]="stackedChartOptions()"
-      [width]="'100%'" [height]="'400px'" [resetZoomEffect]="false">
-      <div class="chart_header">
-        <div class="title">
-          <p class="chart_header__title">Avg Ticket Size</p>
-          <p class="chart_header__sales">Looking at data for each week of Jun</p>
-        </div>
-      </div>
-    </app-chart>
-
+    }
+    }
   </div>
 </div>
